--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="primaryColor">#2b2b2b</color>
+    <color name="primaryLightColor">#545454</color>
+    <color name="primaryDarkColor">#000000</color>
+    <color name="secondaryColor">#141730</color>
+    <color name="secondaryLightColor">#3c3d59</color>
+    <color name="secondaryDarkColor">#000009</color>
+    <color name="white">#ffffff</color>
+    <color name="dark">#0d0f1e</color>
 </resources>
