Viewing selected APOD in a new screen

--- a/app/src/main/res/layout/item_apod.xml
+++ b/app/src/main/res/layout/item_apod.xml
@@ -94,6 +94,16 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/ivDownload" />
 
+                <ImageView
+                    android:id="@+id/ivOpen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_open"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/ivShare" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
