Added loading animation for picture of the day

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorSecondaryVariant">@color/secondaryDarkColor</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
-        <item name="android:colorBackground">@color/white</item>
+        <item name="android:colorBackground">@color/dark</item>
     </style>
 
 </resources>
