--- a/app/src/main/res/layout/apod_list_fragment.xml
+++ b/app/src/main/res/layout/apod_list_fragment.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".features.apodList.ApodListFragment">
 
+    <com.gabriel.astronomypod.common.LoadingView
+        android:id="@+id/loadingView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvApod"
         android:layout_width="match_parent"
