--- a/app/src/main/res/layout/item_apod.xml
+++ b/app/src/main/res/layout/item_apod.xml
@@ -37,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:alpha="0.7"
-                android:background="@color/dark"
+                android:background="?android:colorBackground"
                 android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@+id/tvTitle"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
                     android:minLines="5"
                     android:padding="10dp"
                     android:text="@{apod.explanation}"
-                    android:textColor="@color/white"
+                    android:textColor="?android:textColorPrimary"
                     android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -111,13 +111,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:alpha="0.7"
-                android:background="@color/dark"
+                android:background="?android:colorBackground"
                 android:drawablePadding="20dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:padding="8dp"
                 android:text="@{apod.title}"
-                android:textColor="@color/white"
+                android:textColor="?android:textColorPrimary"
                 android:textSize="16sp"
                 app:drawableEndCompat="@drawable/ic_expand"
                 app:drawableRightCompat="@drawable/ic_expand"
