--- a/app/src/main/res/drawable/ic_date.xml
+++ b/app/src/main/res/drawable/ic_date.xml
@@ -1,10 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:width="27dp"
+    android:height="30dp"
+    android:viewportWidth="18"
+    android:viewportHeight="20">
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M9,11L7,11v2h2v-2zM13,11h-2v2h2v-2zM17,11h-2v2h2v-2zM19,4h-1L18,2h-2v2L8,4L8,2L6,2v2L5,4c-1.11,0 -1.99,0.9 -1.99,2L3,20c0,1.1 0.89,2 2,2h14c1.1,0 2,-0.9 2,-2L21,6c0,-1.1 -0.9,-2 -2,-2zM19,20L5,20L5,9h14v11z"/>
+      android:pathData="M14,11L9,11L9,16L14,16L14,11L14,11ZM13,0L13,2L5,2L5,0L3,0L3,2L2,2C0.89,2 0.01,2.9 0.01,4L0,18C0,19.1 0.89,20 2,20L16,20C17.1,20 18,19.1 18,18L18,4C18,2.9 17.1,2 16,2L15,2L15,0L13,0L13,0ZM16,18L2,18L2,7L16,7L16,18L16,18Z"
+      android:strokeWidth="1"
+      android:fillColor="@color/white"
+      android:fillType="evenOdd" />
 </vector>
