Added fonts and increased line spacing globally

--- a/app/src/main/res/layout/item_apod.xml
+++ b/app/src/main/res/layout/item_apod.xml
@@ -39,6 +39,7 @@
                 android:alpha="0.7"
                 android:background="?android:colorBackground"
                 android:visibility="gone"
+                tools:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/tvTitle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -63,8 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:ellipsize="end"
-                    android:maxLines="6"
-                    android:minLines="5"
+                    android:maxLines="4"
                     android:padding="10dp"
                     android:text="@{apod.explanation}"
                     android:textColor="?android:textColorPrimary"
