--- a/app/src/main/res/layout/apod_today_fragment.xml
+++ b/app/src/main/res/layout/apod_today_fragment.xml
@@ -22,13 +22,13 @@
         android:id="@+id/tvTodayPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Today's Picture"
-        android:textSize="18sp"
-        android:padding="18dp"
-        android:visibility="gone"
-        tools:visibility="visible"
         android:layout_gravity="center_horizontal"
-        android:textColor="?android:textColorPrimary"/>
+        android:padding="18dp"
+        android:text="Today's Picture"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="18sp"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
 
     <com.google.android.material.button.MaterialButton
