--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,8 @@
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
         <item name="android:colorBackground">@color/dark</item>
+        <item name="fontFamily">@font/lato</item>
+        <item name="android:lineSpacingExtra">10dp</item>
     </style>
 
 </resources>
