--- a/app/src/main/res/layout/activity_view_apod.xml
+++ b/app/src/main/res/layout/activity_view_apod.xml
@@ -34,6 +34,16 @@
                     android:visibility="gone"
                     app:layout_collapseMode="none" />
 
+                <TextView
+                    android:id="@+id/tvError"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:textColor="?android:textColorPrimary"
+                    android:visibility="gone"
+                    tools:text="Error" />
+
                 <com.gabriel.astronomypod.common.LoadingView
                     android:id="@+id/loadingView"
                     android:layout_width="match_parent"
@@ -55,6 +65,7 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/infoLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
