--- a/app/src/main/res/layout/apod_list_fragment.xml
+++ b/app/src/main/res/layout/apod_list_fragment.xml
@@ -23,6 +23,16 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
+    <TextView
+        android:id="@+id/tvError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:textColor="?android:textColorPrimary"
+        android:visibility="gone"
+        tools:text="Error" />
+
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fabDate"
         android:layout_width="wrap_content"
