--- a/app/src/main/res/layout/apod_today_fragment.xml
+++ b/app/src/main/res/layout/apod_today_fragment.xml
@@ -19,6 +19,16 @@
         android:layout_height="match_parent" />
 
     <TextView
+        android:id="@+id/tvError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:textColor="?android:textColorPrimary"
+        android:visibility="gone"
+        tools:text="Error" />
+
+    <TextView
         android:id="@+id/tvTodayPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,12 +46,12 @@
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        app:cornerRadius="10dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_margin="24dp"
         android:text="@string/discover_more"
         android:textColor="@color/white"
         android:visibility="gone"
+        app:cornerRadius="10dp"
         app:strokeColor="@color/white"
         app:strokeWidth="1dp"
         tools:visibility="visible" />
