--- a/app/src/main/res/layout/activity_view_apod.xml
+++ b/app/src/main/res/layout/activity_view_apod.xml
@@ -78,6 +78,7 @@
                     android:id="@+id/divider"
                     android:layout_width="0dp"
                     android:layout_height="1dp"
+                    android:alpha="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
