--- a/app/src/main/res/layout/apod_today_fragment.xml
+++ b/app/src/main/res/layout/apod_today_fragment.xml
@@ -51,10 +51,12 @@
         android:layout_marginBottom="10dp"
         android:textColor="?android:textColorPrimary"
         android:textSize="18sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/tvDescription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="Title" />
+        tools:text="Title"
+        tools:visibility="visible" />
 
 
     <TextView
@@ -66,14 +68,16 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="40dp"
-        android:maxLines="2"
         android:ellipsize="end"
+        android:maxLines="2"
         android:textColor="?android:textColorPrimary"
         android:textSize="15sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/btDiscoverMore"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="Description" />
+        tools:text="Description"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/tvTodayPicture"
